# ssh-gateway

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
examples/: profiles.toml  profiles.yaml
skills/ssh-gateway/: SKILL.md
skills/ssh-gateway/agents/: openai.yaml
skills/ssh-gateway/references/: cli-usage.md
skills/ssh-gateway/scripts/: install.ps1  install.sh
src/: agent.rs  bootstrap.rs  cli.rs  config.rs  daemon.rs  errors.rs  ipc.rs  main.rs  protocol.rs  session.rs  ssh.rs
