[package]
name = "ssh-gateway"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TYzzt/ssh-gateway"
readme = "README.md"
description = "Agent-facing SSH gateway with reusable embedded SSH sessions, bastion support, and profile-managed credentials."

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
russh = { version = "0.60", default-features = false, features = ["ring", "rsa", "flate2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
uuid = { version = "1.15", features = ["serde", "v4"] }
